# pio-compiler

./: .cursorrules  .gitignore  README.md  clean  install  platformio.ini  pyproject.toml  requirements.testing.txt  setup.py  task1.md  test
src/pio_compiler/: __init__.py  boards.py  cache_manager.py  cli.py  compiler.py  compiler_stream.py  global_cache.py  lib_archive_manager.py  logging_utils.py  tempdir.py  turbo_deps.py  types.py
src/pio_compiler/assets/: Arduino.h  arduino.cpp  fastled_arduino_impl.cpp  io_stub.cpp
tests/: test_cli.py  test_cli_integration.py  test_compile_examples.py  test_native_compile.py  test_uno_compile.py
tests/integration/: __init__.py  test_cache_locking_native.py  test_cache_stress.py  test_cli_build_exit_code.py  test_cli_cache_build.py  test_cli_fast_build.py  test_cli_glob_patterns.py  test_cli_integration.py  test_cli_luminescent_grand.py  test_cli_purge.py  test_cli_report.py  test_cli_sketch_info_formats.py  test_cli_teensy30_integration.py  test_cli_teensy30_luminescent_grand.py  test_cli_turbo_deps.py  test_fastled_caching.py  test_global_cache.py  test_luminescent_grand_native.py  test_teensy30_compile.py  test_uno_compile.py
tests/test_data/examples/Apa102/: Apa102.ino
tests/test_data/examples/Blink/: Blink.ino
tests/test_data/examples/Blur/: Blur.ino
tests/test_data/examples/LuminescentGrand/: LuminescentGrand.ino
tests/unit/: __init__.py  test_cache_locking.py  test_cache_manager.py  test_cli.py  test_cli_failure.py  test_cli_fast_build.py  test_disable_auto_clean.py  test_global_cache.py  test_lib_archive_manager.py  test_luminescent_grand_native.py  test_platform_board_integration.py  test_sketch_info_parsing.py  test_turbo_deps.py
