[build-system]
requires = ["setuptools>=65.5.1", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pio_compiler"
readme = "README.md"
description = "compiles pio projects in an optimized way"
requires-python = ">=3.10"
keywords = ["template-python-cmd"]
license = { text = "BSD 3-Clause License" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "platformio>=6.1.18",
]
# Change this with the version number bump.
version = "0.0.1"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 200

[tool.pylint."MESSAGES CONTROL"]
good-names = [
    "c",
    "i",
    "ok",
    "id",
    "e",
    "f"
]
disable = [
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.isort]
profile = "black"

[project.scripts]
pio-compile = "pio_compiler.cli:main"
pic = "pio_compiler.cli:main"
tpo = "pio_compiler.cli:main" # new name "turbo pio compile"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-xdist>=3.5",
    "ruff>=0.4",
    "black>=24.0",
    "isort>=5.13",
    "pyright>=1.1",
]
